DarkTheme: correction for the contrast of the Edit Profile button (#134)
Added a rule to invert the colors of the edit profile button at the home page, as means of improving contrast in the Dark Theme

--- a/archivy/static/main.css
+++ b/archivy/static/main.css
@@ -152,6 +152,11 @@ body form {
 	background: #ed6663;
 }
 
+.dark-theme img#pfp {
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
+}
+
 #pfp {
 	margin: 15px;
 }
